--- a/public/index.html
+++ b/public/index.html
@@ -115,11 +115,11 @@
                         und auf nationaler Ebene verfügbar gemacht werden.
                     </p>
                     <p>
-                        Bis zur Entwicklung der OTP war dies keine leichte Aufgabe. Die meisten Tests gab es nur auf Papier.
-                        Das hiess für Ratsuchende sowie BeraterInnen viel Papier und von Hand angefertigte Auswertungen.
-                        Für das SDBB hiess dies grosse Produktionsaufwände, keine zentrale Datensammlung zur Analyse und
-                        Weiterentwicklung der Verfahren, keine einfache Verrechnung der Benutzung von Tests an
-                        Beratungszentren und Kantone, etc.
+                        Bis zur Entwicklung der Online Test Plattform (OTP) war dies keine leichte Aufgabe. Die meisten
+                        Tests gab es nur auf Papier. Das hiess für Ratsuchende sowie BeraterInnen viel Papier und von
+                        Hand angefertigte Auswertungen. Für das SDBB hiess dies grosse Produktionsaufwände, keine zentrale
+                        Datensammlung zur Analyse und Weiterentwicklung der Verfahren, keine einfache Verrechnung der
+                        Benutzung von Tests an Beratungszentren und Kantone, etc.
                     </p>
                     <p>
                         Der Wunsch nach einer zentralen Verwaltungsplattform mit der Möglichkeit, beliebige Testverfahren über
@@ -169,11 +169,12 @@
                                 </dt>
                                 <dd>
                                     Die OTP vereinfacht den Beratungsprozess für alle Beteiligten. Beratende weisen
-                                    Klienten beliebige Testverfahren zu, welche webbasiert und ortsunabhängig ausgefüllt
+                                    Klienten eine beliebige Anzahl Testverfahren zu, welche webbasiert und ortsunabhängig ausgefüllt
                                     werden können. Die Daten werden automatisch ausgewertet und den Beratenden
-                                    zu verfügung gestellt. Die zentrale Datenhaltung ermöglicht die kontinuierlich
-                                    Verbesserung und Normierung der Verfahren. Die Kantone wissen jederzeit um ihre
-                                    Beratungszahlen und -kosten.
+                                    zu verfügung gestellt. Diese haben damit zuverlässige Arbeitsmittel für den weiteren
+                                    Beratungsverlauf. Aufwändige manuelle Auswertungen sind nicht mehr nötig.
+                                    Die zentrale Datenhaltung ermöglicht die kontinuierlich Verbesserung und Normierung
+                                    der Verfahren. Die Kantone wissen jederzeit um ihre Beratungszahlen und -kosten.
                                 </dd>
                                 <dt>
                                     Abstimmung auf Zielpublikum, Usability und Informationsarchitektur, Orientierung
@@ -181,8 +182,8 @@
                                 <dd>
                                     Die Beratenden werden in ihrer täglichen Arbeit unterstützt und durch die Prozesse geführt.
                                     Kantonale Strukturen und andere Rollen können im Berechtigungssystem flexibel abgebildet werden.
-                                    Das Ausfüllen der Tests ist unkompliziert und kann dank responsive Design auf Desktop
-                                    oder Tablets erledigt werden. Berichte können aus Elementen wunschgemäss zusammengestellt
+                                    Das Ausfüllen der Tests ist unkompliziert und kann dank responsive Design geräteunabhängig
+                                    ausgefüllt werden. Berichte können aus Elementen wunschgemäss zusammengestellt
                                     und als PDF-Datei generiert werden.
                                 </dd>
                             </dl>
@@ -205,15 +206,17 @@
                                     der OTP richten sich nach aktueller Best-Practice, was die Daten- und
                                     Applikationssicherheit anbelangt. Persönliche Testergebnisse können nur von den
                                     zuständigen Beratungsfachleuten eingesehen werden. Testautoren können nur die
-                                    anonymisierten Rohdaten ihrer Verfahren exportieren.
+                                    anonymisierten Rohdaten ihrer Verfahren exportieren. Personenbezogene Daten werden
+                                    automatisch nach 6 Monaten gelöscht.
                                 </dd>
                                 <dt>Technologie</dt>
                                 <dd>
                                     Für die Umsetzung der Lösung wurden eine Reihe moderner Web Stacks eingesetzt. Die
                                     Kommunikation zwischen den Testverfahren und der Verwaltungsplattform läuft über eine
-                                    XML REST Schnittstelle mit Versionskontrolle. Die Lösung ist fehlertolerant,
-                                    falls Verbindungen fehlschlagen, stellen Synchronisationsjobs regelmässig den korrekten
-                                    Zustand wieder her.
+                                    XML REST Schnittstelle mit Versionskontrolle. Dies ermöglicht dem SDBB, ohne
+                                    Integrationsaufwand oder Betriebsunterbruch neue Testverfahren anzubinden, welche nicht
+                                    auf SDBB Servern laufen. Die Lösung ist fehlertolerant, falls Verbindungen fehlschlagen,
+                                    stellen Synchronisationsjobs regelmässig den korrekten Zustand wieder her.
                                 </dd>
                             </dl>
                         </div>
@@ -240,13 +243,13 @@
                 </div>
                 <div class="col-lg-10">
                     <ul>
-                        <li><strong>Digitalisierung</strong> von Papiertests (Kosten sparen, erleichterter Zugang, Standardisierung)</li>
-                        <li><strong>Automatische Auswertungen</strong> (mehr Effizienz, weniger Fehleranfälligkeit)</li>
-                        <li><strong>Zentrales Datenpool</strong> (ermöglicht schweizweite anonymisierte Auswertungen, vereinfacht Normierungen)</li>
-                        <li><strong>Entkopplung der Testverfahren</strong> dank Web-Schnittstelle (Unabhängigkeit von Testanbietern und -entwicklern)</li>
-                        <li><strong>Nutzungsstatistiken & Abrechnungslogik</strong> (einfache, testübergreifende Nutzungsanalyse und Abrechnung)</li>
-                        <li><strong>Flexibles Benutzer-, Gruppen- und Rechtesystem</strong> (Berücksichtigung des Föderalismus durch Abbildung kantonaler Strukturen)</li>
-                        <li><strong>Responsive Design</strong> für Administration und Testdurchführungen (Durchführung z. B. auf Tablet möglich)</li>
+                        <li><strong>Digitalisierung</strong> von Papiertests - Kosten sparen, erleichterter Zugang, Standardisierung</li>
+                        <li><strong>Automatische Auswertungen</strong> - mehr Effizienz, weniger Fehleranfälligkeit</li>
+                        <li><strong>Zentrales Datenpool</strong> - ermöglicht schweizweite anonymisierte Auswertungen, vereinfacht Normierungen</li>
+                        <li><strong>Entkopplung der Testverfahren</strong> dank Web-Schnittstelle - neue Tests von verschiedenen Anbietern können jederzeit aufgeschaltet werden</li>
+                        <li><strong>Nutzungsstatistiken & Abrechnungslogik</strong> - einfache, testübergreifende Nutzungsanalyse und Abrechnung</li>
+                        <li><strong>Flexibles Benutzer-, Gruppen- und Rechtesystem</strong> - Berücksichtigung des Föderalismus durch Abbildung kantonaler Strukturen</li>
+                        <li><strong>Responsive Design</strong> für Administration und Testdurchführungen - Orts- und Geräteabhängige Durchführung</li>
                     </ul>
                 </div>
             </div>
