--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">SDBB OTP - Berufsberatung 2.0</a>
+                <a class="navbar-brand" href="#page-top">Berufsberatung 2.0</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="intro-text">
-                        <span class="name">SDBB OTP - Berufsberatung 2.0</span>
+                        <span class="name">Berufsberatung 2.0</span>
                         <hr class="star-light">
                         <span class="skills">Die Online Test Plattform für Berufsberatung in der Schweiz</span>
                     </div>
