--- a/public/index.html
+++ b/public/index.html
@@ -146,9 +146,10 @@
                                 <strong>Die Online Test Plattform schafft Public Value.</strong>
                             </p>
                             <p>
-                                Das SDBB stellt mit der OTP den kantonalen Berufs-, Studien- und Laufbahnberatungsstellen
-                                eine Reihe relevanter Instrumente erstmal online zur Verfügung. Das SDBB setzt dabei auf eine
-                                nationale aber flexible Lösung, welche kantonale Eigenheiten abzubilden vermag.
+                                Das SDBB stellt mit der Online Test Plattform (OTP) den kantonalen Berufs-, Studien- und
+                                Laufbahnberatungsstellen eine Reihe relevanter Instrumente erstmal online zur Verfügung.
+                                Das SDBB setzt dabei auf eine nationale aber flexible Lösung, welche kantonale Eigenheiten
+                                abzubilden vermag.
                             </p>
                         </div>
                     </div>
@@ -249,7 +250,7 @@
                         <li><strong>Entkopplung der Testverfahren</strong> dank Web-Schnittstelle - neue Tests von verschiedenen Anbietern können jederzeit aufgeschaltet werden</li>
                         <li><strong>Nutzungsstatistiken & Abrechnungslogik</strong> - einfache, testübergreifende Nutzungsanalyse und Abrechnung</li>
                         <li><strong>Flexibles Benutzer-, Gruppen- und Rechtesystem</strong> - Berücksichtigung des Föderalismus durch Abbildung kantonaler Strukturen</li>
-                        <li><strong>Responsive Design</strong> für Administration und Testdurchführungen - Orts- und Geräteabhängige Durchführung</li>
+                        <li><strong>Responsive Design</strong> für Administration und Testdurchführungen - orts- und geräteunabhängige Durchführung</li>
                     </ul>
                 </div>
             </div>
