--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-12">
                     <div class="embed-pusher">
                         <div class="embed-container">
-                            <iframe src="https://www.youtube.com/embed/H9IWS-pjh9A" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/H9IWS-pjh9A" suggestedQuality="highres" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="intro-text">
