interkationstext by oli

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-12">
                     <div class="embed-pusher">
                         <div class="embed-container">
-                            <iframe src="https://www.youtube.com/embed/H9IWS-pjh9A" suggestedQuality="highres" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/H9IWS-pjh9A?suggestedQuality=highres" suggestedQuality="highres" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="intro-text">
@@ -195,8 +195,9 @@
                                     Interaktion, Kommunikation, Partizipation
                                 </dt>
                                 <dd>
-                                    OTP ermöglicht eine Interaktion mit dem Kunden, ….
-                                    <span class="placeholder-text">sehe keinen Zusatznutzen von diesem Abschnitt, liegt auf der Hand, würd ich weglassen.</span>
+                                    OTP erlaubt eine orts-, zeit- und geräteunabhängige Interaktion und Kommunikation.
+                                    Damit wird den unterschiedlichen Arbeitsgewohnheiten Rechnung getragen und erlaubt
+                                    eine höchst mögliche Flexibilität für die Anwender der OTP und deren Klienten.
                                 </dd>
                                 <dt>
                                     Sicherheit
