--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-12">
                     <div class="embed-pusher">
                         <div class="embed-container">
-                            <iframe src="https://www.youtube.com/embed/H9IWS-pjh9A?suggestedQuality=highres" suggestedQuality="highres" frameborder="0" allowfullscreen></iframe>
+                            <div id="player" />
                         </div>
                     </div>
                     <div class="intro-text">
@@ -348,6 +348,43 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/freelancer.js"></script>
+
+    <script>
+        // 2. This code loads the IFrame Player API code asynchronously.
+        var tag = document.createElement('script');
+
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+        // 3. This function creates an <iframe> (and YouTube player)
+        //    after the API code downloads.
+        var player;
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('player', {
+                videoId: 'H9IWS-pjh9A',
+                events: {
+                    'onReady': onPlayerReady,
+                    'onStateChange': onPlayerStateChange
+                }
+            });
+        }
+
+        // 4. The API will call this function when the video player is ready.
+        function onPlayerReady(event) {
+            event.target.setPlaybackQuality('hd1080');
+        }
+
+        // 5. The API calls this function when the player's state changes.
+        //    The function indicates that when playing a video (state=1),
+        //    the player should play for six seconds and then stop.
+        var done = false;
+        function onPlayerStateChange(event) {
+            if (event.data == YT.PlayerState.BUFFERING) {
+                event.target.setPlaybackQuality('hd1080');
+            }
+        }
+    </script>
 
 </body>
 
