--- a/public/index.html
+++ b/public/index.html
@@ -267,7 +267,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-9">
+                <div class="col-lg-7">
                     <p>
                         Die OTP wird seit dem Launch im August 2015 bereits rege genutzt. Mehr als <strong>1000
                         BerufsberaterInnen</strong> aus <strong>26 Kantonen</strong> kümmern sich pro Jahr um
@@ -290,10 +290,38 @@
                     </ul>
                     <p>Die Anbindung eines weiteren Duzend Testverfahren ist geplant.</p>
                 </div>
-                <div class="col-lg-3">
-                    <p class="placeholder-text">
-                        Hier kommen evtl. noch ein paar Screenshots von Testverfahren und ein Download eines Berichts.
-                    </p>
+                <div class="col-lg-5">
+                    <div id="carousel" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel" data-slide-to="1"></li>
+                            <li data-target="#carousel" data-slide-to="2"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img src="img/screenshot-fit.png" alt="FIT" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <img src="img/screenshot-sit.png" alt="SIT" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <img src="img/screenshot-brta.png" alt="BRTA" class="pictures" />
+                            </div>
+                        </div>
+
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -342,7 +370,7 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
