feedback integration, layout improvements, style improvements

--- a/public/index.html
+++ b/public/index.html
@@ -100,10 +100,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3">
-                    <img class="visible-lg" src="img/girl.png" height="280" />
+                <div class="col-lg-2">
+                    <img class="visible-lg" src="img/girl.png" height="250" />
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-10">
                     <p>
                         Das <a href="http://sdbb.ch" target="_blank">Schweizerische Dienstleistungszentrum für Berufsbildung
                         sowie Berufs-, Studien- und Laufbahnberatung (SDBB)</a> ist eine Institution der Schweizerischen
@@ -139,9 +139,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-10">
+                <div class="col-lg-12">
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-9">
                             <p>
                                 <strong>Die Online Test Plattform schafft Public Value.</strong>
                             </p>
@@ -151,9 +151,14 @@
                                 Das SDBB setzt dabei auf eine nationale aber flexible Lösung, welche kantonale Eigenheiten
                                 abzubilden vermag.
                             </p>
+                            <p class="placeholder-text">Hier müsste dieser magische Supersatz kommen (warum das Projekt gewinnt),
+                                am besten gemerged mit dem was bereits steht hier.</p>
+                        </div>
+                        <div class="col-lg-3">
+                            <img class="visible-lg pull-right" src="img/counselor.png" height="200px" />
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row padding-top">
                         <div class="col-lg-6">
                             <dl>
                                 <dt>
@@ -196,8 +201,8 @@
                                 </dt>
                                 <dd>
                                     OTP erlaubt eine orts-, zeit- und geräteunabhängige Interaktion und Kommunikation.
-                                    Damit wird den unterschiedlichen Arbeitsgewohnheiten Rechnung getragen und erlaubt
-                                    eine höchst mögliche Flexibilität für die Anwender der OTP und deren Klienten.
+                                    Damit wird den unterschiedlichen Arbeitsgewohnheiten Rechnung getragen und
+                                    eine höchst mögliche Flexibilität für die Anwender der OTP und deren Klienten erreicht.
                                 </dd>
                                 <dt>
                                     Sicherheit
@@ -213,9 +218,9 @@
                                 </dd>
                                 <dt>Technologie</dt>
                                 <dd>
-                                    Für die Umsetzung der Lösung wurden eine Reihe moderner Web Stacks eingesetzt. Die
+                                    Für die Umsetzung der Lösung wurden eine Reihe moderner Web-Stacks eingesetzt. Die
                                     Kommunikation zwischen den Testverfahren und der Verwaltungsplattform läuft über eine
-                                    XML REST Schnittstelle mit Versionskontrolle. Dies ermöglicht dem SDBB, ohne
+                                    XML-REST-Schnittstelle mit Versionskontrolle. Dies ermöglicht dem SDBB, ohne
                                     Integrationsaufwand oder Betriebsunterbruch neue Testverfahren anzubinden, welche nicht
                                     auf SDBB Servern laufen. Die Lösung ist fehlertolerant, falls Verbindungen fehlschlagen,
                                     stellen Synchronisationsjobs regelmässig den korrekten Zustand wieder her.
@@ -223,9 +228,6 @@
                             </dl>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2 text-right">
-                    <img class="visible-lg" src="img/cook.png" height="400px" />
                 </div>
             </div>
         </div>
@@ -240,57 +242,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-2">
-                    <img class="visible-lg" src="img/counselor.png" height="150px" />
-                </div>
-                <div class="col-lg-10">
-                    <ul>
-                        <li><strong>Digitalisierung</strong> von Papiertests - Kosten sparen, erleichterter Zugang, Standardisierung</li>
-                        <li><strong>Automatische Auswertungen</strong> - mehr Effizienz, weniger Fehleranfälligkeit</li>
-                        <li><strong>Zentraler Datenpool</strong> - ermöglicht schweizweite anonymisierte Auswertungen, vereinfacht Normierungen</li>
-                        <li><strong>Entkopplung der Testverfahren</strong> dank Web-Schnittstelle - neue Tests von verschiedenen Anbietern können jederzeit aufgeschaltet werden</li>
-                        <li><strong>Nutzungsstatistiken & Abrechnungslogik</strong> - einfache, testübergreifende Nutzungsanalyse und Abrechnung</li>
-                        <li><strong>Flexibles Benutzer-, Gruppen- und Rechtesystem</strong> - Berücksichtigung des Föderalismus durch Abbildung kantonaler Strukturen</li>
-                        <li><strong>Responsive Design</strong> für Administration und Testdurchführungen - orts- und geräteunabhängige Durchführung</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="success" id="zahlen">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Zahlen & Fakten</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-7">
-                    <p>
-                        Die OTP wird seit dem Launch im August 2015 bereits rege genutzt. Mehr als <strong>1000
-                        BerufsberaterInnen</strong> aus <strong>26 Kantonen</strong> kümmern sich pro Jahr um
-                        <strong>Tausende Ratsuchende</strong>, welche <strong>Zehntausende Testdurchführungen</strong> machen
-                        während <strong>über 50 Administratoren</strong> sich um Kosten, Rechte und Daten kümmern.
-                    </p>
-                    <p>
-                        An das zentrale von <a class="success" href="http://www.netcetera.com/de/" target="_blank">Netcetera</a>
-                        entwickelte Verwaltungsmodul sind über die erwähnte Web-Schnittstelle bereits 14 von
-                        <a href="https://www.cloud-solutions.net/de/" target="_blank">cloud solutions</a> entwickelte
-                        Testverfahren angebunden.
-                    </p>
-                    <ul>
-                        <li>Berufsfeldertest 22 in DE/FR/IT</li>
-                        <li>Fotointeressetest 2012 in DE/FR/IT</li>
-                        <li>Sozialinteressetest SIT 2 in DE</li>
-                        <li>Gamper Interessetestreihe in FR</li>
-                        <li>Gamper Schulniveautest in FR</li>
-                        <li>BRTA Leistungstest in FR</li>
-                    </ul>
-                    <p>Die Anbindung eines weiteren Duzend Testverfahren ist geplant.</p>
-                </div>
-                <div class="col-lg-5">
+                <div class="col-lg-6">
                     <div id="carousel" class="carousel slide" data-ride="carousel">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
@@ -322,6 +274,52 @@
                             <span class="sr-only">Next</span>
                         </a>
                     </div>
+                </div>
+                <div class="col-lg-6">
+                    <dl>
+                        <dt>Digitalisierung von Papiertests</dt><dd>Kosten sparen, erleichterter Zugang, Standardisierung</dd>
+                        <dt>Automatische Auswertungen</dt><dd>Mehr Effizienz, weniger Fehleranfälligkeit</dd>
+                        <dt>Zentraler Datenpool</dt><dd>Ermöglicht schweizweite anonymisierte Auswertungen, vereinfacht Normierungen</dd>
+                        <dt>Entkopplung der Testverfahren dank Web-Schnittstelle</dt><dd>Neue Tests von verschiedenen Anbietern können jederzeit aufgeschaltet werden</dd>
+                        <dt>Nutzungsstatistiken & Abrechnungslogik</dt><dd>Einfache, testübergreifende Nutzungsanalyse und Abrechnung</dd>
+                        <dt>Flexibles Benutzer-, Gruppen- und Rechtesystem</dt><dd>Berücksichtigung des Föderalismus durch Abbildung kantonaler Strukturen</dd>
+                        <dt>Responsive Design für Administration und Testdurchführungen</dt><dd>Orts- und geräteunabhängige Durchführung</dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="success" id="zahlen">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Zahlen & Fakten</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-10">
+                    <p>
+                        Die OTP wird seit dem Launch im August 2015 bereits rege genutzt. Mehr als <strong>1000
+                        BerufsberaterInnen</strong> aus <strong>26 Kantonen</strong> kümmern sich pro Jahr um
+                        <strong>Tausende Ratsuchende</strong>, welche <strong>Zehntausende Testdurchführungen</strong> machen
+                        während <strong>über 50 Administratoren</strong> sich um Kosten, Rechte und Daten kümmern.
+                    </p>
+                    <p>
+                        An das zentrale von <a class="success" href="http://www.netcetera.com/de/" target="_blank">Netcetera <i class="fa fa-external-link-square"></i></a>
+                        entwickelte Verwaltungsmodul sind über die erwähnte Web-Schnittstelle bereits 14 von
+                        <a href="https://www.cloud-solutions.net/de/" target="_blank">cloud solutions <i class="fa fa-external-link-square"></i></a> entwickelte
+                        Testverfahren angebunden. Dabei handelt es sich um den Berufsfeldertest 22 (DE, FR, IT), den
+                        Fotointeressetest 2012 (DE, FR, IT), den Sozialinteressetest SIT 2 (DE), die Gamper
+                        Interessetestreihe (FR), den Gamper Schulniveautest (FR) sowie den BRTA Leistungstest (FR).
+                    </p>
+                    <p>
+                        Die Anbindung eines weiteren Duzend Testverfahren ist geplant.
+                    </p>
+                </div>
+                <div class="col-lg-2">
+                    <img class="visible-lg pull-right" src="img/cook.png" height="200px" />
                 </div>
             </div>
         </div>
