--- a/public/index.html
+++ b/public/index.html
@@ -329,13 +329,149 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Demo-Zugänge</h2>
+                    <h2>Demo</h2>
                     <hr class="star-primary" />
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p class="placeholder-text">Zugänge und Kurzanleitung einer typischen Handlung. Kommt noch von Oli.</p>
+                    <p>
+                        Die unten stehende Diashow demonstriert die wichtigsten Aspekte der OTP mit Screenshots und kurzen
+                        Erklärungen. Die Diashow kann jederzeit durch hovern oder berühren gestoppt werden.
+                    </p>
+                    <p>
+                        Für einen tieferen Einblick haben Juroren ebenfalls die Gelegenheit, in die Rolle eines Beraters
+                        und eines Klienten zu schlüpfen. Informationen dazu sind unter der Diashow zu finden.
+                    </p>
+                    <div id="demo-carousel" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#demo-carousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#demo-carousel" data-slide-to="1"></li>
+                            <li data-target="#demo-carousel" data-slide-to="2"></li>
+                            <li data-target="#demo-carousel" data-slide-to="3"></li>
+                            <li data-target="#demo-carousel" data-slide-to="4"></li>
+                            <li data-target="#demo-carousel" data-slide-to="5"></li>
+                            <li data-target="#demo-carousel" data-slide-to="6"></li>
+                            <li data-target="#demo-carousel" data-slide-to="7"></li>
+                            <li data-target="#demo-carousel" data-slide-to="8"></li>
+                            <li data-target="#demo-carousel" data-slide-to="9"></li>
+                            <li data-target="#demo-carousel" data-slide-to="10"></li>
+                            <li data-target="#demo-carousel" data-slide-to="11"></li>
+                            <li data-target="#demo-carousel" data-slide-to="12"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Der Berater wählt die entsprechenden Testverfahren für seine Klienten aus.</p>
+                                </div>
+                                <img src="img/demo/image1.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Gewünschte Berichtselemente, Vergleichsnormen und andere Aspekte werden konfiguriert.</p>
+                                </div>
+                                <img src="img/demo/image2.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Die Testeinladung wird erstellt und der Test kann durch den Klienten gestartet werden.</p>
+                                </div>
+                                <img src="img/demo/image3.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Der Klient sieht seine neuen und erledigten Testungen.</p>
+                                </div>
+                                <img src="img/demo/image4.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Nach erfolgreich abgeschlossener Testung wird automatisch ein Bericht zu Handen des Beraters erstellt.</p>
+                                </div>
+                                <img src="img/demo/image5.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Systemnutzer können verschieden Profile mit unterschiedlichen Rollen haben, zwischen denen gewechselt werden kann.</p>
+                                </div>
+                                <img src="img/demo/image6.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Administratoren können die angehängten Testverfahren editieren, deaktivieren und neue hinzufügen.</p>
+                                </div>
+                                <img src="img/demo/image7.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Die Testverfahren verfügen über verschiedene Charakteristiken und Konfigurationsmöglichkeiten.</p>
+                                </div>
+                                <img src="img/demo/image8.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Administration der Systemnutzer und ihre Rollen- und Rechtezuteilung.</p>
+                                </div>
+                                <img src="img/demo/image9.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Auszug einer Nutzungsstatistik.</p>
+                                </div>
+                                <img src="img/demo/image10.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p>
+                                        <i class="fa fa-info-circle"></i>
+                                        Die Rohdaten der Testungen können anonymisiert exportiert werden, zwecks Überprüfung
+                                        der Normen und statistischen Auswertungen zur Verbesserung der Testverfahren.
+                                    </p>
+                                </div>
+                                <img src="img/demo/image11.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Administratoren können Systemnutzern Rollen vergeben und sie Organisationen zuweisen.</p>
+                                </div>
+                                <img src="img/demo/image12.png" class="pictures" />
+                            </div>
+                            <div class="item">
+                                <div class="carousel-caption">
+                                    <p><i class="fa fa-info-circle"></i> Zuweisung der Nutzerrollen.</p>
+                                </div>
+                                <img src="img/demo/image13.png" class="pictures" />
+                            </div>
+                        </div>
+
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#demo-carousel" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#demo-carousel" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-6 text-center">
+                    <h3>Klientenrolle</h3>
+
+                </div>
+                <div class="col-lg-6 text-center">
+                    <h3>Beraterrolle</h3>
+                    <a href="https://otp-quality.sdbb.ch/login/otp" class="btn btn-outline" role="button">Als BeraterIn einloggen</a>
+                    <p>
+                        Dazu die angegebenen Email/Passwort Kombinationen verwenden. Die Angaben finden Sie im
+                        juryrelevanten Teil der Eingabe.
+                    </p>
                 </div>
             </div>
         </div>
